fix: overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -128,9 +128,3 @@ img {
 .link:hover {
     text-decoration: underline;
 }
-
-@media (orientation: portrait) {
-    body {
-      overflow-x: hidden!important;
-    }
-  }
